# ws_mimic_jetson

./: .gitmodules
mimic-nav2/: CMakeLists.txt  README.md  package.xml
mimic-nav2/config/: depth_to_laserscan.yaml  joystick.yml  nav2_params.yaml  slam_toolbox_params.yaml
mimic-nav2/launch/: bringup.launch.py  bringup_with_teleop.launch.py  display_zed_nav2.launch.py  localization.launch.py  mapping.launch.py  navigation.launch.py  navigation_remote.launch.py  robot_bringup.launch.py  robot_with_sensors.launch.py  teleop.launch.py
mimic-nav2/rviz/: nav2_config.rviz  nav2_mapping.rviz  nav2_simple.rviz
mimic-nav2/urdf/: mecanum_robot_nav.urdf  mecanum_robot_nav2.urdf
mimic-teleop/: CMakeLists.txt  package.xml  setup.py
mimic-teleop/config/: joystick.yml
mimic-teleop/launch/: mimic_teleop.launch.py  visualize.launch.py
mimic-teleop/rviz/: mecanum_robot.rviz
mimic-teleop/src/: __init__.py  odom_monitor.py  topic_monitor.py  twist_to_serial.py
mimic-teleop/urdf/: mecanum_robot.urdf
mimic-zed/: package.xml  setup.py
mimic-zed/config/: zed.yaml  zed2_config.yaml  zed_nav2_override.yaml
mimic-zed/launch/: display_zed.launch.py  zed_camera.launch.py
mimic-zed/rviz/: zed_stereo.rviz
mimic-zed/src/: __init__.py
